tests/lean/commandPrefix.lean.expected.out
(fun (this : Unit) => this) Unit.unit : Unit
commandPrefix.lean:3:0: error: expected command
